Native Email Iuuses Twinkle

--- a/src/classes/NativeEmailController.cls
+++ b/src/classes/NativeEmailController.cls
@@ -4,14 +4,16 @@ public class NativeEmailController {
         Boolean isMailSent = true;
         RingDNAApiCallouts ringDNAApiCallout = new RingDNAApiCallouts(true);
         Id  sObjectId = Id.valueOf(participantId);
+        Id  mailToId = Id.valueOf(mailTo);
         String objName = sObjectId.getSObjectType().getDescribe().getName();
         Sobject participant =  Database.query('Select Id,OwnerId,Email,Name from '+objName +' where Id = :sObjectId');
-        if (participant.get('Email') != null){
-            mailTo = String.valueOf(participant.get('Email'));
+        Sobject mailToObject =  Database.query('Select Id,OwnerId,Email,Name from '+objName +' where Id = :mailToId');
+        if (mailToObject.get('Email') != null){
+            String emailId=String.valueOf(mailToObject.get('Email'));
             String participantOwnerId = String.valueOf(participant.get('OwnerId'));
-            Map<String, Object> responseMap = ringDNAApiCallout.sendNativeEmail(mailTo, '', body, String.valueOf(sequenceActionId),  subject,  participantOwnerId);
-            if (responseMap.isEmpty()  || (!responseMap.isEmpty() && (responseMap.get('success') == false || responseMap.get('success') == 'false')) ){
-                isMailSent = sendSfdcEmail(participantId,templateId,sequenceActionId, mailCc, mailBcc);
+            Map<String, Object> responseMap = ringDNAApiCallout.sendNativeEmail(emailId, '', body, String.valueOf(sequenceActionId),  subject,  participantOwnerId);
+            if (responseMap.isEmpty()  || (!responseMap.isEmpty() && responseMap.get('success') == false) ){
+                isMailSent = sendSfdcEmail(mailTo,templateId,sequenceActionId, mailCc, mailBcc);
             } 
         }else{
             isMailSent = false;
@@ -144,5 +146,5 @@ public class NativeEmailController {
         singleEmail.setTemplateId(EmailTemplateId);
 		return singleEmail; 
     }
-   
+    
 }
