--- a/src/classes/CadenceController.cls
+++ b/src/classes/CadenceController.cls
@@ -119,7 +119,7 @@ public with sharing class CadenceController {
                 List<Sequence_Action__c> testcreateActionParticipants =CadenceService.createActionParticipants(objIdToAllCadActListMap, new Map<Id, SObject>(sObjectListToUpdate), objName);
             }
             if(sObjectListToUpdate !=  null && sObjectListToUpdate.size() > 0) {
-                update sObjectListToUpdate; 
+                Database.SaveResult[] srList = Database.update(sObjectListToUpdate, false);
             }
         }
         
