SDFC-531:Sequence Error - Can't Activate Sequence, Salesforce Errors

--- a/src/classes/CadenceActionListController.cls
+++ b/src/classes/CadenceActionListController.cls
@@ -235,7 +235,7 @@ public class CadenceActionListController {
             for(Contact con : contactList){
                 con.Opportunity_Id__c = null;
             }
-            update contactList;
+            Database.SaveResult[] results = Database.update(contactList, false);
         }
     }
 }
